<resources>
    <string name="app_name">FootballApp</string>
    <string name="internet_problem">Make sure you have internet</string>


    // BottomNav texts
    <string name="badge_text">3</string>
    <string name="matches">Matches</string>
    <string name="top_players">Top Players</string>
    <string name="videos">Videos</string>
    <string name="favorites">Favourites</string>
    <string name="settings">Settings</string>
    
    
    <string name="match_preview">Match Preview</string>
    <string name="game_week">Gameweek 3</string>
    <string name="ball_possession_title">Ball possession</string>
    <string name="first_half">1st Half</string>
    <string name="overview">Overview</string>
    <string name="statistic">Statistic</string>
    <string name="line_up">Line up</string>
    <string name="error_occurred">"Error occurred"</string>
    
    <string name="substitution">Substitution</string>
    <string name="tripping">Tripping</string>
    <string name="goals_by">Goals by</string>
    <string name="own_goal">Own Goal</string>
    <string name="unsportsmanlike_conduct">Unsportsmanlike conduct</string>
</resources>